[tool.poetry]
name = "github-user-language-analyzer"
version = "0.1.0"
description = ""
authors = ["greennarae <smk5647@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}
termgraph = "^0.5.3"
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
